# DL-Im2Latex

./: .gitignore  README.md  pyproject.toml
im2latex/: evaluate_models.py  hpc.sh  main.py  streamlit_app.py
im2latex/conf/: config.yaml  config_classes.py  config_debug.yaml  finetuning_config.yaml  inference_config.yaml
im2latex/evaluators/: ocrevaluator.py  swingradcam.py
im2latex/parser/: config_classes.py
im2latex/trainers/: __init__.py  abstracttrainer.py  visionencoderdecoderfinetuner.py  visionencoderdecodertrainer.py
im2latex/util/: inference.py  inference_app.py  latexdataset.py  streamlit_app.py  test_decoder.py  test_inference.py
